welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: class Array takes type parameters
def peindreColonne(T:Array){
                     ^Array1:3: error: class Array takes type parameters
def peindreColonne(T:Array){
                     ^